Remove line under active tab and fix alignment for tracking icons:  https://www.screencast.com/t/awRRfv0nIvN

--- a/styles.css
+++ b/styles.css
@@ -615,7 +615,7 @@ ul.fntabs .section.img-text {
 }
 .course-content .fntopicsoutlinecontent.fnsectionouter:nth-child(3) {
     border-top: 0;
-    margin-top: 0;
+    margin-top: -1px;
     padding-top: 0;
 }
 .course-content .fntopicsoutlinecontent.fnsectionouter {
